force-app/main/default/objects/Task_Definition__c/Task_Definition__c.object-meta.xml
<CustomObject>
    <description>HRP-16124</description>
    <label>Task Definition</label>
    <nameField>
        <label>Task Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>