force-app/main/default/objects/Task_Definition__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Strategic Business Planning Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>