force-app/main/default/objects/Task_Definition__c/fields/Due_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Offset__c</fullName>
    <label>Due Date Offset</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>