force-app/main/default/objects/Task_Definition__c/fields/Task_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Sub_Type__c</fullName>
    <label>Task Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Task</fullName>
            </value>
            <value>
                <fullName>General Task</fullName>
            </value>
            <value>
                <fullName>Hand Off Task</fullName>
            </value>
            <value>
                <fullName>Opportunity Task</fullName>
            </value>
            <value>
                <fullName>Site Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>