force-app/main/default/objects/Task_Definition__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>72 Hour Check-In</fullName>
            </value>
            <value>
                <fullName>Announcement Coordination</fullName>
            </value>
            <value>
                <fullName>Annual Meeting</fullName>
            </value>
            <value>
                <fullName>Appointment Schedule Maintenance</fullName>
            </value>
            <value>
                <fullName>Award Recognition Planning</fullName>
            </value>
            <value>
                <fullName>Contingency Planning</fullName>
            </value>
            <value>
                <fullName>Continuous Engagement</fullName>
            </value>
            <value>
                <fullName>Coordinate Publicity &amp; Branding Needs</fullName>
            </value>
            <value>
                <fullName>Day of Drive Collections Check</fullName>
            </value>
            <value>
                <fullName>Dedicated Drive Authorization Form</fullName>
            </value>
            <value>
                <fullName>Drive Logistics Check</fullName>
            </value>
            <value>
                <fullName>External Leadership Engagement</fullName>
            </value>
            <value>
                <fullName>Internal Partners Engagement</fullName>
            </value>
            <value>
                <fullName>Marketing Program Review</fullName>
            </value>
            <value>
                <fullName>Mission Impact and Inclusion Planning</fullName>
            </value>
            <value>
                <fullName>MOI COI TLA</fullName>
            </value>
            <value>
                <fullName>National Partnership SLA</fullName>
            </value>
            <value>
                <fullName>One Week Check-in</fullName>
            </value>
            <value>
                <fullName>Parental Consent Check</fullName>
            </value>
            <value>
                <fullName>Parking Needs</fullName>
            </value>
            <value>
                <fullName>Post Drive Analysis AM</fullName>
            </value>
            <value>
                <fullName>Post Drive Analysis SBPM</fullName>
            </value>
            <value>
                <fullName>Power Red Review</fullName>
            </value>
            <value>
                <fullName>Publicity Order Not Created</fullName>
            </value>
            <value>
                <fullName>Publicity Review Needed</fullName>
            </value>
            <value>
                <fullName>Quarterly Meeting</fullName>
            </value>
            <value>
                <fullName>Recruitment Assessment</fullName>
            </value>
            <value>
                <fullName>Recruitment Presentation Tabling</fullName>
            </value>
            <value>
                <fullName>Recruitment Strategy Meeting</fullName>
            </value>
            <value>
                <fullName>Room Rentals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>