force-app/main/default/objects/Task_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Task_Sub_Type__c</columns>
    <columns>Scheduling_Method__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>